bug/#2359_wish-cards-jump-on-hover fixed

--- a/src/app/wishes/components/wish-item/wish-card/wish-card.component.css
+++ b/src/app/wishes/components/wish-item/wish-card/wish-card.component.css
@@ -1,16 +1,16 @@
 .card {
-  border: none;
+  border: 1px solid rgba(225, 225, 225, 0.7)!important;
   margin-bottom: 10px;
   display: inline-block;
   font-size: 0.75rem;
+}
+.card:hover {
+  border: 1px solid #fecbcc!important;
 }
 .shadow {
   -webkit-box-shadow: 0 0 2px 2px rgba(250, 159, 159, 0.2);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
   -moz-box-shadow:    0 0 2px 2px rgba(250, 159, 159, 0.2);  /* Firefox 3.5 - 3.6 */
   box-shadow:         0 0 2px 2px rgba(250, 159, 159, 0.2);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
-}
-.card:hover {
-  border: 1px solid #fecbcc!important;
 }
 .blurred-card-overlay {
   background-color: rgba(250, 243, 243, 0.83)
